--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1>Games Shop</h1>
             <nav>
                 <ul>
-                    <li> <a href="#shop">Sobre a loja</a> </li>
+                    <li> <a href="#shop">Sobre a lojaaaa</a> </li>
                     <li> <a href="#contact">Contato</a> </li>
                 </ul>
             </nav>
